[package]
name = "mcaptcha-cache"
description = "mCaptcha Redis module that implements leaky bucket algorithm"
version = "0.1.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"
repository = "https://github.com/mcaptcha/cache"
homepage = "https://github.com/mcaptcha/cache"
license = "AGPLv3 or later version"

[lib]
crate-type = ["cdylib"]
name = "cache"

[dependencies]
redis-module = { version="0.18", features = ["experimental-api"]}
libc = "0.2"
serde_json = "1.0.64"
serde = {version = "1.0.126", features = ["derive"]}
lazy_static = "1.4.0"
rand = "0.8.3"
derive_more = "0.99"
libmcaptcha = { branch = "master", git = "https://github.com/mCaptcha/libmcaptcha", features = ["minimal"], default-features = false }
#libmcaptcha = { path = "../libmcaptcha", features = ["minimal"], default-features = false}

#[target.x86_64-unknown-linux-musl]
#linker = "cc"

[features]
test = ["redis-module/test"]
