[package]
name = "mcaptcha-cache"
description = "mCaptcha Redis module that implements leaky bucket algorithm"
version = "0.1.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2021"
repository = "https://github.com/mcaptcha/cache"
homepage = "https://github.com/mcaptcha/cache"
license = "AGPLv3 or later version"

[lib]
crate-type = ["cdylib", "rlib"]
name = "cache"

[dependencies]
redis-module = { version="2.0.5", features = ["min-redis-compatibility-version-6-0"], default-features=false}
libc = "0.2"
serde_json = "1.0.81"
serde = {version = "1.0.137", features = ["derive"]}
lazy_static = "1.4"
rand = "0.8"
derive_more = "0.99"
libmcaptcha = "0.2.4"
#libmcaptcha = { path = "../libmcaptcha", features = ["minimal"], default-features = false}

#[target.x86_64-unknown-linux-musl]
#linker = "cc"

#[features]
#test = ["redis-module/test"]
[dev-dependencies]
redis-module = { version="2.0.5", features = ["min-redis-compatibility-version-7-2"], default-features=false}
